unpackaged/main/default/objects/API_Connector__Lead_Maps__c/API_Connector__Lead_Maps__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Lead Map</label>
</CustomObject>