unpackaged/main/default/objects/API_Connector__Lead_Maps__c/fields/API_Connector__Case_Key__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__Case_Key__c</fullName>
    <label>Case Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>