unpackaged/main/default/objects/API_Connector__Lead_Maps__c/fields/API_Connector__Mapping_Output_Fields__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__Mapping_Output_Fields__c</fullName>
    <label>Mapping Output Fields</label>
    <type>TextArea</type>
</CustomField>